--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@ body {
     color: #89b3f1;
     margin: auto;
     padding: 20px;
-    text-align: right;
+    padding-bottom: 60px; /* Space for footer */
+    text-align: left;
 }
 
 header {
@@ -17,4 +18,33 @@ h2 {
     color: #89b3f1;
     text-align: center;
     margin-top: 30px;
+}
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+img {
+    display: block;
+    margin: 0 auto;
+    border-radius: 50%;
+    text-align : center;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+a {
+    color: #ee3a73;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+    background-color: #8435eb;
 }
